Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL)
Description
If quickly running
start slave io_thread;
|
stop slave io_thread;
|
and the IO thread is stopped during its "handshake" with the primary (i.e during safe_connect() or get_master_version_and_clock()), it will report IO Errno: 2013 in SHOW SLAVE STATUS.
However, this isn't actually an error, as the user aborted the IO thread. The code should be updated to not report an error when the connection is killed due to user intervention.