MDEV-32892 IO Thread Reports False Error When Stopped During Connecting to Primary

Currently, the replication system incorrectly logs a connection error (Errno: 2013) in SHOW SLAVE STATUS when the slave IO thread is manually stopped by the user during the connection handshake process.

The code has been modified to check the `mi->abort_slave` flag within the `connect_to_master` function.